--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2188,6 +2188,9 @@ plugins:
         subs: [ 'Tweak Settings -> Magic: Max Active Runes' ]
 
   - name: 'Improved Soultrap.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/28588/'
+        name: 'Spell - SoulClaim'
     msg:
       - type: error
         content:
@@ -20501,6 +20504,8 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/12510/'
         name: 'Named Souls in Gems'
+      - link: 'https://www.nexusmods.com/skyrim/mods/28588/'
+        name: 'Spell - SoulClaim'
     clean:
       - crc: 0x4F713A4A
         util: 'TES5Edit v4.0.4b'
@@ -24222,6 +24227,11 @@ plugins:
   - name: 'Silent khajiit night-eye.esp'
     after: [ 'nighteyetoggle.esp' ]
   - name: 'Acquisitive Soul Gems.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/5312/'
+        name: 'Acquisitive Soul Gems'
+      - link: 'https://www.nexusmods.com/skyrim/mods/28588/'
+        name: 'Spell - SoulClaim'
     after:
       - 'SkyRe_Main.esp'
       - 'Enchantments Upgraded.esp'
