--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2187,6 +2187,15 @@ plugins:
       - <<: *useBashTweakInstead
         subs: [ 'Tweak Settings -> Magic: Max Active Runes' ]
 
+  - name: 'Improved Soultrap.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/28588/'
+        name: 'Spell - SoulClaim'
+    msg:
+      - <<: *useInstead
+        subs: [ 'Named Souls In Gems - Compatibility Patch' ]
+        condition: 'active("NamedSoulGems.esp")'
+
   - name: 'InfernoStormShout.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/8343/'
@@ -20484,21 +20493,13 @@ plugins:
     clean:
       - crc: 0x9578E0FF
         util: 'TES5Edit v4.0.2f'
-  - name: 'Improved Soultrap.esp'
-    msg:
-      - type: error
-        content:
-          - lang: en
-            text: 'Use NamedSoulGems compatibility patch instead.'
-          - lang: de
-            text: 'Verwenden Sie stattdessen den NamedSoulGems Kompatibilitätspatch.'
-          - lang: ja
-            text: 'NamedSoulGemsの互換パッチを代わりに使用してください。'
-        condition: 'file("NamedSoulGems.esp")'
+
   - name: 'NamedSoulGems.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/12510/'
         name: 'Named Souls in Gems'
+      - link: 'https://www.nexusmods.com/skyrim/mods/28588/'
+        name: 'Spell - SoulClaim'
     clean:
       - crc: 0x4F713A4A
         util: 'TES5Edit v4.0.4b'
@@ -24220,6 +24221,11 @@ plugins:
   - name: 'Silent khajiit night-eye.esp'
     after: [ 'nighteyetoggle.esp' ]
   - name: 'Acquisitive Soul Gems.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/5312/'
+        name: 'Acquisitive Soul Gems'
+      - link: 'https://www.nexusmods.com/skyrim/mods/28588/'
+        name: 'Spell - SoulClaim'
     after:
       - 'SkyRe_Main.esp'
       - 'Enchantments Upgraded.esp'
