--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2089,23 +2089,15 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/44212/'
         name: 'Morrowloot'
-      - link: 'https://www.nexusmods.com/skyrim/mods/50740/'
-        name: 'Morrowloot 4E Edition'
     tag:
       - Delev
       - Relev
     dirty:
-      # Morrowloot - v4.0 and v4.0.1
+      # v4.0 and v4.0.1
       - <<: *quickClean
         crc: 0x7522A792
         util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 15
-      # Morrowloot 4E Edition - v4.3
-      - <<: *quickClean
-        crc: 0x06851CEB
-        util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 26
-        udr: 1
 
   - name: '(Realistic Wildlife Loot|RWL).*\.es(m|p)'
     url: [ 'https://www.nexusmods.com/skyrim/mods/8075/' ]
