--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1894,6 +1894,7 @@ plugins:
   - name: 'Imp''s More Complex Needs.esm'
     msg: [ *obsolete ]
 
+  - name: 'mslVampiricThirst( - Requiem)?\.esp'
   - name: 'mslVampiricThirst.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/24222/'
