--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1013,6 +1013,9 @@ plugins:
     msg: [ *obsolete ]
 
   - name: 'Realistic Weapon Positions.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/50096/'
+        name: 'Realistic Weapon Positions'
     group: *reproccerGroup
     msg:
       - type: say
