Update Realistic Weapon Positions (#822)
* Move plugin
  * To 'AudioVisual - Models & Textures' section.
  * Tweaks position of sheathed equipment.

* Add location
  * https://www.nexusmods.com/skyrim/mods/50096/

* Remove unaliased message
  * Explained in desc.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1012,6 +1012,12 @@ plugins:
   - name: 'Radiant and Unique Potions and Poisons.esp'
     msg: [ *obsolete ]
 
+  - name: 'Realistic Weapon Positions.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/50096/'
+        name: 'Realistic Weapon Positions'
+    group: *reproccerGroup
+
   - name: 'Unique BOOZE Bottles( Alternate Names Version)?\.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/19922/'
@@ -24138,17 +24144,7 @@ plugins:
     group: *reproccerGroup
   - name: 'SkyRe Destruction Tree Tweak Patch.*\.esp'
     group: *reproccerGroup
-  - name: 'Realistic Weapon Positions.esp'
-    group: *reproccerGroup
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Install the meshes from this mod last, to override other skeleton replacers and armor mesh replacers.'
-          - lang: de
-            text: 'Installieren Sie die Meshes von dieser Mod zuletzt, um andere Skeleton-Replacers und Armor-Mesh-Replacers zu überschreiben.'
-          - lang: ja
-            text: 'このModのメッシュは最後にインストールしてください。Skeletonや防具のメッシュを置き換えるModを上書きするためです。'
+
   #qotsafans patches now include over 150 uniquely named esps
   - name: 'qotsafans.*\.esp'
     group: *reproccerGroup
