--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2500,6 +2500,9 @@ plugins:
     inc: [ 'Perks Unbound.esp' ]
 
   - name: 'SMLeveledItemSmithing.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/14699/'
+        name: 'SM Leveled Item Smithing'
     msg:
       - type: say
         content:
