Add cleaning data
  * v1.1.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2503,6 +2503,9 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/14699/'
         name: 'SM Leveled Item Smithing'
+    clean:
+      - crc: 0x136C45AC
+        util: 'TES5Edit v4.0.4c'
 
 ###### Gameplay - User Interface ######
   - name: 'AHZmoreHUD.esp'
