Update SM Leveled Item Smithing (#823)
* Move plugin
  * To 'Gameplay - Skills & Perks' section.
  * Adds a smithing perk.

* Add location
  * https://www.nexusmods.com/skyrim/mods/14699/

* Remove unaliased message
  * Explained in desc. & readme.

* Add cleaning data
  * v1.1.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2499,6 +2499,14 @@ plugins:
   - name: 'Perks Unbound - Helmless Warrior.esp'
     inc: [ 'Perks Unbound.esp' ]
 
+  - name: 'SMLeveledItemSmithing.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/14699/'
+        name: 'SM Leveled Item Smithing'
+    clean:
+      - crc: 0x136C45AC
+        util: 'TES5Edit v4.0.4c'
+
 ###### Gameplay - User Interface ######
   - name: 'AHZmoreHUD.esp'
     url:
@@ -21029,18 +21037,7 @@ plugins:
         crc: 0x99A898C6
         util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 56
-  - name: 'SMLeveledItemSmithing.esp'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Conflict with other mods that modify the smithing perk tree.'
-          - lang: de
-            text: 'Steht im Konflikt mit anderen Mods, die die Perks des Schmiedens modifizieren.'
-          - lang: ja
-            text: '鍛造の能力ツリーを変更するModと競合します。'
-          - lang: ru
-            text: 'Конфликтует с другими модами, которые меняют древо перков кузнечества.'
+
   - name: 'Skyrim Scaling Stopper.esp'
     tag:
       - Delev
