--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1983,6 +1983,7 @@ plugins:
         condition: 'active("TTYM - Think to Yourself Messages.esp") and checksum("scripts/SHR_Strings.pex", DD3C5CA2)'
     # Do not clean
 
+  - name: 'ToL_(Core|SKSE)_by_Brevi\.esp'
   - name: 'ToL_Core_by_Brevi.esp'
     msg:
       - type: say
