--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1984,6 +1984,9 @@ plugins:
     # Do not clean
 
   - name: 'ToL_(Core|SKSE)_by_Brevi\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/12687/'
+        name: 'Tales of Lycanthropy - Werewolf Overhaul'
   - name: 'ToL_Core_by_Brevi.esp'
     msg:
       - type: say
