Update Tales of Lycanthropy (#824)
* Move plugins
  * To 'Gameplay' section.
  * Overhauls player lycanthropy.

* Add plugin
  * Group with plugins from same page.

* Add location
  * https://www.nexusmods.com/skyrim/mods/12687/

* Remove unaliased message
  * Appears to import spell properly in v2.0.1.3H.

* Remove plugin
  * No more metadata.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1983,6 +1983,13 @@ plugins:
         condition: 'active("TTYM - Think to Yourself Messages.esp") and checksum("scripts/SHR_Strings.pex", DD3C5CA2)'
     # Do not clean
 
+  - name: 'ToL_(Core|SKSE)_by_Brevi\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/12687/'
+        name: 'Tales of Lycanthropy - Werewolf Overhaul'
+  - name: 'ToL_SKSE_by_Brevi.esp'
+    req: [ *SKSE ]
+
   - name: 'UsefulDogs.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/64021/'
@@ -19615,19 +19622,7 @@ plugins:
     inc: [ 'Scary Vampire Lord.esp' ]
   - name: 'Scary Werewolf 3 sec.esp'
     inc: [ 'Scary Werewolf Form.esp' ]
-  - name: 'ToL_Core_by_Brevi.esp'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'It has been reported that Automatic Variants does not import the spell that infects the player on being hit by a werewolf.'
-          - lang: de
-            text: 'Es wurde berichtet, dass Automatic Variants den Zauber, der den Spieler infiziert, wenn er von einem Werwolf getroffen wird, nicht importiert.'
-          - lang: ja
-            text: 'Automatic Variantsではウェアウルフがプレイヤーを攻撃したときに感染させる呪文がインポートされないと報告されています。'
-        condition: 'active("Automatic Variants.esp")'
-  - name: 'ToL_SKSE_by_Brevi.esp'
-    req: [ *SKSE ]
+
   - name: 'BloodmoonRising.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/22611/'
