--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1918,6 +1918,7 @@ plugins:
         display: 'Requiem v3.0.0+'
         condition: 'version("Requiem.esp", "3.0.0", >=)'
 
+  - name: '(PISE.*|WeaponsOf3E( 1-0| Beta)? PISE( Compatibility)? Plugin)\.esp'
   - name: 'PISE.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/1269/' ]
     tag:
