--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1919,8 +1919,10 @@ plugins:
         condition: 'version("Requiem.esp", "3.0.0", >=)'
 
   - name: '(PISE.*|WeaponsOf3E( 1-0| Beta)? PISE( Compatibility)? Plugin)\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/1269/'
+        name: 'PISE - Improved Skyrim Experience'
   - name: 'PISE.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/1269/' ]
     tag:
       - Delev
       - Relev
@@ -1931,7 +1933,6 @@ plugins:
         itm: 133
     msg: [ *corrupt ]
   - name: 'PISE-Bartering Tweaks Only.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/1269/' ]
     msg:
       - type: say
         content:
@@ -1944,7 +1945,6 @@ plugins:
           - lang: ru
             text: 'Возможны конфликты с некоторыми модами, правящими инвентарь, но вы можете получить некоторые из моих изменений с другими, из конфликтующего мода. В большинстве случаев не используйте этот мод.'
   - name: 'PISE-Less Intense Level Scaling.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/1269/' ]
     msg: [ *obsolete ]
   - name: 'PISE-Reduced Potions.esp'
     tag:
