Add `obsolete` message
  * Author considers deprecated by ASIS
    * https://www.nexusmods.com/skyrim/mods/18436/
  * Replaces existing message.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1922,6 +1922,9 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/1269/'
         name: 'PISE - Improved Skyrim Experience'
+    msg:
+      - <<: *obsolete
+        subs: [ '[ASIS](https://www.nexusmods.com/skyrim/mods/18436/)' ]
   - name: 'PISE.esp'
     tag:
       - Delev
@@ -1945,7 +1948,6 @@ plugins:
           - lang: ru
             text: 'Возможны конфликты с некоторыми модами, правящими инвентарь, но вы можете получить некоторые из моих изменений с другими, из конфликтующего мода. В большинстве случаев не используйте этот мод.'
   - name: 'PISE-Less Intense Level Scaling.esp'
-    msg: [ *obsolete ]
   - name: 'PISE-Reduced Potions.esp'
     tag:
       - Delev
