--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2641,6 +2641,7 @@ plugins:
       - crc: 0x8F56DE23
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'Hothtrooper44_Armor(Compilation|_Ecksstra)\.esp'
   - name: 'Hothtrooper44_ArmorCompilation.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/19733/' ]
     msg:
