--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2642,8 +2642,10 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'Hothtrooper44_Armor(Compilation|_Ecksstra)\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/19733/'
+        name: 'Immersive Armors'
   - name: 'Hothtrooper44_ArmorCompilation.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/19733/' ]
     msg:
       - type: warn
         content:
@@ -2667,7 +2669,6 @@ plugins:
       - crc: 0x0F782AFB
         util: 'TES5Edit v4.0.2j'
   - name: 'Hothtrooper44_Armor_Ecksstra.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/19733/' ]
     clean:
       # v8
       - crc: 0x344E6933
