--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1406,6 +1406,8 @@ plugins:
   - name: 'MTOH.esm'
     msg: [ *obsolete ]
 
+###### Character Appearance - Presets ######
+
 ###### Encounters - Allies ######
   - name: 'BreezeDog.esp'
     url:
