--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1407,6 +1407,8 @@ plugins:
     msg: [ *obsolete ]
 
 ###### Character Appearance - Presets ######
+  - name: 'ESP(v1_1(nondependent)?)?\.esp'
+  - name: 'ESPv1_1(nondependent)?\.esp'
   - name: 'ESP.esp'
     msg:
       - type: say
