--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1408,6 +1408,9 @@ plugins:
 
 ###### Character Appearance - Presets ######
   - name: 'ESP(v1_1(nondependent)?)?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/15963/'
+        name: 'ESP - Expanded Skyrim Presets'
   - name: 'ESPv1_1(nondependent)?\.esp'
   - name: 'ESP.esp'
     msg:
