Add `obsolete` message
  * To obsolete plugin.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1417,6 +1417,7 @@ plugins:
         subs: [ 'Skyrim Redone' ]
         condition: 'active("SkyRe_Races.esp")'
   - name: 'ESP.esp'
+    msg: [ *obsolete ]
 
 ###### Encounters - Allies ######
   - name: 'BreezeDog.esp'
