Add `useOnlyOneX` message
  * Only one version should be used at once.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1416,6 +1416,9 @@ plugins:
       - <<: *compatIssuesWithX
         subs: [ 'Skyrim Redone' ]
         condition: 'active("SkyRe_Races.esp")'
+      - <<: *useOnlyOneX
+        subs: [ 'Expanded Skyrim Presets ESP' ]
+        condition: 'many("ESPv1_1(nondependent)?\.esp")'
   - name: 'ESP.esp'
     msg: [ *obsolete ]
 
