--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1995,6 +1995,7 @@ plugins:
         type: warn
         condition: 'active("Dawnguard.esm") and checksum("SkyRealism - Capacity and Carry Weight.esp", 4F1987E0)'
 
+  - name: 'SkyRe_.*\.esp'
   - name: 'SkyRe_Main.esp'
     after: [ 'Scoped Bows.esp' ]
     req: [ *SKSE ]
@@ -2142,6 +2143,7 @@ plugins:
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 1
   # SkyRe - Obsolete plugins #
+  - name: 'SkyRe_(Enemies|Lighting|Main_NoDawnguard|Vampirism)\.esp'
   - name: 'SkyRe_Enemies.esp'
     msg: [ *obsolete ]
     tag: [ Relev ]
@@ -2270,6 +2272,7 @@ plugins:
     tag:
       - Delev
       - Relev
+  - name: 'SkyRe_Plugin_.*\.esp'
   - name: 'SkyRe_Plugin_BerserkBlackSwordsmanArmor.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/21092/' ]
     msg: [ *useInsteadReProccer ]
