--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1996,6 +1996,9 @@ plugins:
         condition: 'active("Dawnguard.esm") and checksum("SkyRealism - Capacity and Carry Weight.esp", 4F1987E0)'
 
   - name: 'SkyRe_.*\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/9286/'
+        name: 'T3nd0''s Skyrim Redone'
   - name: 'SkyRe_Main.esp'
     after: [ 'Scoped Bows.esp' ]
     req: [ *SKSE ]
@@ -2136,7 +2139,6 @@ plugins:
         subs: [ '**StaRe.esp**' ]
         condition: 'active("StaRe.esp")'
   - name: 'SkyRe_Survivalism.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/9286/' ]
     dirty:
       - <<: *quickClean
         crc: 0x92CF529F
