--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -8076,6 +8076,7 @@ plugins:
         util: '[TES5Edit v4.0.2j](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 7
   - name: 'bouncy_bodices.*\.esp'
+    url: [ 'https://www.nexusmods.com/skyrim/mods/21271/' ]
     msg:
       - <<: *useOnlyOneX
         condition: 'many("bouncy_bodices.*\.esp")'
@@ -8411,6 +8412,7 @@ plugins:
         util: '[TES5Edit v4.0.2j](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 4
   - name: 'DemonHunterArmor.esp'
+    url: [ 'https://www.nexusmods.com/skyrim/mods/27060/' ]
     msg:
       - type: say
         content:
@@ -9423,6 +9425,7 @@ plugins:
         condition: 'checksum("matys mithril armor enhanced.esp", A71FA4F0)'
 
   - name: 'MorSit.esp'
+    url: [ 'https://www.nexusmods.com/skyrim/mods/25213/' ]
     msg:
       - type: say
         content:
@@ -9770,6 +9773,7 @@ plugins:
     msg: [ *requiresUNPB ]
 
   - name: 'SeraphineHuntedArmor.esp'
+    url: [ 'https://www.nexusmods.com/skyrim/mods/24723/' ]
     msg:
       - type: say
         content:
@@ -21962,6 +21966,7 @@ plugins:
   - name: 'CMCompanionLevel.esp'
     msg: [ *alreadyInOrFixedByPatchv1_6 ]
   - name: 'Companion_Crea.esp'
+    url: [ 'https://www.nexusmods.com/skyrim/mods/24710/' ]
     msg:
       - *requiresCBBEorUNP
       - type: say
@@ -21975,6 +21980,7 @@ plugins:
           - lang: ru
             text: 'Убедитесь, что вы используете правильный esp, для соответствующего типа тела'
   - name: 'Companion_Lese.esp'
+    url: [ 'https://www.nexusmods.com/skyrim/mods/24710/' ]
     msg:
       - *requiresCBBEorUNP
       - type: say
@@ -22171,6 +22177,7 @@ plugins:
       - <<: *corrupt
         condition: 'checksum("Illdi.esp", B941754D)'
   - name: 'Illia.esp'
+    url: [ 'https://www.nexusmods.com/skyrim/mods/13997/' ]
     msg:
       - <<: *corrupt
         condition: 'checksum("Illdi.esp", B941754D)'
