Replace unaliased messages
  * With `requiresCBBEorUNP`.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -8403,17 +8403,7 @@ plugins:
         itm: 4
   - name: 'DemonHunterArmor.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/27060/' ]
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Be sure you have the correct version for the body type installed: [DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709) or [CBBE](https://www.nexusmods.com/skyrim/mods/2666)'
-          - lang: de
-            text: 'Stellen Sie sicher, dass Sie die richtige Version für den Körpertyp installiert haben: [DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709) oder [CBBE](https://www.nexusmods.com/skyrim/mods/2666)'
-          - lang: ja
-            text: '必ずインストールされている体型Mod（[DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709)か[CBBE](https://www.nexusmods.com/skyrim/mods/2666)）とマッチするバージョンを使用してください。'
-          - lang: ru
-            text: 'Убедитесь что у вас установлена корректная версия типа тел: [DIMONIZED женское тело UNP](https://www.nexusmods.com/skyrim/mods/6709) или [женское тело CBBE](https://www.nexusmods.com/skyrim/mods/2666).'
+    msg: [ *requiresCBBEorUNP ]
   - name: 'DemonHunterV2armor.esp'
     msg: [ *requiresCBBE ]
 
@@ -9416,17 +9406,7 @@ plugins:
 
   - name: 'MorSit.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/25213/' ]
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Be sure to use the correct esp for [CBBE](https://www.nexusmods.com/skyrim/mods/2666) | [DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709)'
-          - lang: de
-            text: 'Achten Sie darauf, die richtige esp für [CBBE](https://www.nexusmods.com/skyrim/mods/2666) | [DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709) zu verwenden.'
-          - lang: ja
-            text: '必ず[CBBE](https://www.nexusmods.com/skyrim/mods/2666)か[DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709)用のうちの適切なEspを使用するようにしてください。'
-          - lang: ru
-            text: 'Убедидесь, что используете правильный esp для [CBBE](https://www.nexusmods.com/skyrim/mods/2666) или [DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709)'
+    msg: [ *requiresCBBEorUNP ]
 
   ### Mystic Elven Armor ###
   - name: 'SaderHorses.esp'
@@ -9764,17 +9744,7 @@ plugins:
 
   - name: 'SeraphineHuntedArmor.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/24723/' ]
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Be sure you have the correct body mod for the esp. [DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709) or [CBBE](https://www.nexusmods.com/skyrim/mods/2666).'
-          - lang: de
-            text: 'Stellen Sie sicher, dass Sie den richtigen Körper Mod für die esp haben. [DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709) oder [CBBE](https://www.nexusmods.com/skyrim/mods/2666).'
-          - lang: ja
-            text: '必ず[DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709)か[CBBE](https://www.nexusmods.com/skyrim/mods/2666)のうち、インストールされている体型Modと同じバージョンのEspを使用してください。.'
-          - lang: ru
-            text: 'Убедитесь, что используете корректный реплейсер тел для этого esp. [DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709) или [CBBE](https://www.nexusmods.com/skyrim/mods/2666).'
+    msg: [ *requiresCBBEorUNP ]
 
   - name: 'Shadowrend.esp'
     url:
@@ -22136,17 +22106,7 @@ plugins:
         condition: 'checksum("Illdi.esp", B941754D)'
   - name: 'Illia.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/13997/' ]
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Be sure you have the correct body mod for the esp. [DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709) or [CBBE](https://www.nexusmods.com/skyrim/mods/2666).'
-          - lang: de
-            text: 'Stellen Sie sicher, dass Sie den richtigen Körper Mod für die esp haben. [DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709) oder [CBBE](https://www.nexusmods.com/skyrim/mods/2666).'
-          - lang: ja
-            text: '必ず[DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709)か[CBBE](https://www.nexusmods.com/skyrim/mods/2666)のうち、インストールされている体型Modと同じバージョンのEspを使用してください。.'
-          - lang: ru
-            text: 'Убедитесь, что используете корректный реплейсер тел для этого esp. [DIMONIZED UNP](https://www.nexusmods.com/skyrim/mods/6709) или [CBBE](https://www.nexusmods.com/skyrim/mods/2666).'
+    msg: [ *requiresCBBEorUNP ]
   - name: 'ImaniSuda.esp'
     msg:
       - <<: *corrupt
